force-app/main/default/objects/Survey_Monkey__c/Survey_Monkey__c.object-meta.xml
<CustomObject>
    <label>Satisfaction Survey</label>
    <nameField>
        <label>Survey Record</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Surveys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>