force-app/main/default/objects/Survey_Monkey__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Brok/Gen, Broker, Customer, Dist/Gen, Distributor, ShipTo/Gen</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipName>Surveys</relationshipName>
    <type>Lookup</type>
</CustomField>