force-app/main/default/objects/Survey_Monkey__c/fields/Q1_Comments__c.field-meta.xml
<CustomField>
    <fullName>Q1_Comments__c</fullName>
    <label>Q1 Comments</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>