force-app/main/default/objects/Survey_Monkey__c/fields/Q1_Overall__c.field-meta.xml
<CustomField>
    <fullName>Q1_Overall__c</fullName>
    <description>Overall, how satisfied were you with your recent service?</description>
    <label>Q1 Overall</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Extremely Satisfied</fullName>
            </value>
            <value>
                <fullName>Somewhat Satisfied</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
            <value>
                <fullName>Somewhat Dissatisfied</fullName>
            </value>
            <value>
                <fullName>Extremely Dissatisfied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>