force-app/main/default/objects/Survey_Monkey__c/fields/Q2_Comments__c.field-meta.xml
<CustomField>
    <fullName>Q2_Comments__c</fullName>
    <label>Q2 Comments</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>