force-app/main/default/objects/Survey_Monkey__c/fields/Q2_Meet_Expectations__c.field-meta.xml
<CustomField>
    <fullName>Q2_Meet_Expectations__c</fullName>
    <description>Did our service meet your expectations?</description>
    <label>Q2 Meet Expectations</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Somewhat</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>