force-app/main/default/objects/Survey_Monkey__c/fields/Q3_Rate_Ease_of_Business__c.field-meta.xml
<CustomField>
    <fullName>Q3_Rate_Ease_of_Business__c</fullName>
    <description>How would you rate the ease of doing business with Clean Harbors?</description>
    <label>Q3 Rate Ease of Business</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Extremely Easy</fullName>
            </value>
            <value>
                <fullName>Somewhat Easy</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
            <value>
                <fullName>Somewhat Not Easy</fullName>
            </value>
            <value>
                <fullName>Not Easy At All</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>