force-app/main/default/objects/Survey_Monkey__c/fields/Q4_Recommend_CH__c.field-meta.xml
<CustomField>
    <fullName>Q4_Recommend_CH__c</fullName>
    <label>Q4 Recommend CH</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>10 (Extremely Likely)</fullName>
            </value>
            <value>
                <fullName>9</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>0 (Not at all likely)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>