force-app/main/default/objects/Survey_Monkey__c/fields/Q5_Use_CH_Again__c.field-meta.xml
<CustomField>
    <fullName>Q5_Use_CH_Again__c</fullName>
    <description>How likely are you to use Clean Harbors again?</description>
    <label>Q5 Use CH Again</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Extremely Likely</fullName>
            </value>
            <value>
                <fullName>Somewhat Likely</fullName>
            </value>
            <value>
                <fullName>Not Sure</fullName>
            </value>
            <value>
                <fullName>Somewhat Unlikely</fullName>
            </value>
            <value>
                <fullName>Extremely Unlikely</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>