force-app/main/default/objects/Survey_Monkey__c/fields/Q6_Ease_of_Service__c.field-meta.xml
<CustomField>
    <fullName>Q6_Ease_of_Service__c</fullName>
    <inlineHelpText>How easy was it to schedule the service?</inlineHelpText>
    <label>Q6 Ease of Service</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Extremely Easy</fullName>
            </value>
            <value>
                <fullName>Somewhat Easy</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
            <value>
                <fullName>Somewhat Difficult</fullName>
            </value>
            <value>
                <fullName>Extremely Difficult</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>