force-app/main/default/objects/Survey_Monkey__c/fields/Q7_On_Time__c.field-meta.xml
<CustomField>
    <fullName>Q7_On_Time__c</fullName>
    <inlineHelpText>Did we arrive on time?</inlineHelpText>
    <label>Q7 On Time</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>