force-app/main/default/objects/Survey_Monkey__c/fields/Q8_Accurate_Paperwork__c.field-meta.xml
<CustomField>
    <fullName>Q8_Accurate_Paperwork__c</fullName>
    <inlineHelpText>Was the paperwork (manifests, labels, packing lists, etc.) accurate?</inlineHelpText>
    <label>Q8 Accurate Paperwork</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>