force-app/main/default/objects/Survey_Monkey__c/fields/Q9_Improve_Service__c.field-meta.xml
<CustomField>
    <fullName>Q9_Improve_Service__c</fullName>
    <inlineHelpText>Is there anything we can do to improve our service or enhance your experience?</inlineHelpText>
    <label>Q9 Improve Service</label>
    <length>25000</length>
    <type>LongTextArea</type>
</CustomField>