force-app/main/default/objects/Survey_Monkey__c/fields/Weight_Q1_Overall__c.field-meta.xml
<CustomField>
    <fullName>Weight_Q1_Overall__c</fullName>
    <label>Weight-Q1 Overall</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>