force-app/main/default/objects/Survey_Monkey__c/fields/Weight_Q2_Meet_Expectations__c.field-meta.xml
<CustomField>
    <fullName>Weight_Q2_Meet_Expectations__c</fullName>
    <label>Weight-Q2 Meet Expectations</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>