force-app/main/default/objects/Survey_Monkey__c/fields/Weight_Q3_Rate_Ease_of_Business__c.field-meta.xml
<CustomField>
    <fullName>Weight_Q3_Rate_Ease_of_Business__c</fullName>
    <label>Weight-Q3 Rate Ease of Business</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>