force-app/main/default/objects/Survey_Monkey__c/fields/Weight_Q4_Recommend_CH__c.field-meta.xml
<CustomField>
    <fullName>Weight_Q4_Recommend_CH__c</fullName>
    <label>Weight-Q4 Recommend CH</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>