force-app/main/default/objects/Survey_Monkey__c/fields/Weight_Q5_Use_CH_Again__c.field-meta.xml
<CustomField>
    <fullName>Weight_Q5_Use_CH_Again__c</fullName>
    <label>Weight-Q5 Use CH Again</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>