force-app/main/default/objects/Survey_Monkey__c/fields/Weight_Q6_Ease_of_Service__c.field-meta.xml
<CustomField>
    <fullName>Weight_Q6_Ease_of_Service__c</fullName>
    <inlineHelpText>How easy was it to schedule the service?</inlineHelpText>
    <label>Weight-Q6 Ease of Service</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>