force-app/main/default/objects/Survey_Monkey__c/fields/Weight_Q7_On_Time__c.field-meta.xml
<CustomField>
    <fullName>Weight_Q7_On_Time__c</fullName>
    <label>Weight-Q7 On Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>