force-app/main/default/objects/Survey_Monkey__c/fields/Weight_Q8_Accurate_Paperwork__c.field-meta.xml
<CustomField>
    <fullName>Weight_Q8_Accurate_Paperwork__c</fullName>
    <label>Weight-Q8 Accurate Paperwork</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>